--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 </td>
                 <td>
                     <h2>Vishal Gupta</h2>
-                    <p><i>Founder <a target="_blank" href="http://www.google.com">DEMO</a> & Fresher</i></p>
+                    <p><i>Founder <a target="_blank" href="http://github.com">DEMO</a> & Fresher</i></p>
                     <p> I ❤️ Web Development and Coding Enthusiasts 🚀</p>
                     <nav>
                         <ul>
